[package]
name = "todomvc"
version = "0.1.0"
description = "TodoMVC implementation using yew"
authors = ["Kaoet <kaoet.ibe@outlook.com>"]
repository = "https://github.com/kaoet/yew-todomvc.git"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "0.15"
# https://github.com/catsigma/parcel-plugin-wasm.rs/issues/30
wasm-bindgen = "0.2, <0.2.61"
web-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"
strum = "0.18.0"
strum_macros = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
